--- a/html-css/projetos/projeto002/estilo/style.css
+++ b/html-css/projetos/projeto002/estilo/style.css
@@ -40,9 +40,9 @@ span {
     color: #333;
   }
 a{
-    background-color:  #00962d;
+    background-color:  #960000;
     border-radius: 25px;
-    padding: 5px;
+    padding: 10px;
     padding-left: 10px;
     padding-right: 10px;
     text-decoration: none;
