--- a/html-css/projetos/projeto002/estilo/style.css
+++ b/html-css/projetos/projeto002/estilo/style.css
@@ -7,8 +7,9 @@ body{
 div{
     text-align: center;
     background-color: #f5f5f5;
+    border-bottom:solid #d5d5d5 2px;
     padding: 50px;
-    border-color: #d5d5d5;
+   
     
 }
 
@@ -39,6 +40,7 @@ span {
     font-weight: bold;
     color: #333;
   }
+
 a{
     background-color:  #00965f;
     border-radius: 25px;
