--- a/html-css/projetos/projeto002/estilo/style.css
+++ b/html-css/projetos/projeto002/estilo/style.css
@@ -1,35 +1,41 @@
 @charset "UFT-8";
 
 body{
-    background-color:  #f5f5f5;
+   margin: 0px;
 }
 
 div{
     text-align: center;
     background-color: #f5f5f5;
-    border-bottom:solid #d5d5d5 2px;
+    border-top:1px solid #d5d5d5 ;
     padding: 50px;
    
     
 }
 
-
+h1{
+    font-family: tahoma,sans-serif;
+    text-align: center;
+    
+}
 
 h2{
-    font-size: 24px;
+    font-family: tahoma,sans-serif;
+    text-align: center;
    
 }
 
 h3{
-    font-size: 20px;
-    font-family: tahoma;
+    font-family: tahoma,sans-serif;
+    text-align: center;
 }
 
 p{
-    font-size: 28px;
+    font-family: tahoma,sans-serif;
+    text-align: center;
+    line-height: 28px;
     width: 930px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 15px auto 30px auto;
    
 }
 
@@ -37,18 +43,17 @@ img{
     width: 190px;
 }
 span {
+    font-family: tahoma,sans-serif;
     font-weight: bold;
-    color: #333;
+    
   }
 
 a{
-    background-color:  #00965f;
+    background-color:  #49b970;
     border-radius: 25px;
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
     text-decoration: none;
     color: #ffffff;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
+    padding: 10px 30px;
 }
