--- a/html-css/projetos/projeto004/estilo/style.css
+++ b/html-css/projetos/projeto004/estilo/style.css
@@ -1,32 +1,59 @@
-@charset "UTF-8";
+@charset "UFT-8";
 
-
-
-
-
-div {
-    font-family: Verdana;
+body{
+   margin: 0px;
 }
 
-h1 {
-    font-size: 22px;
+div{
+    text-align: center;
+    background-color: #f5f5f5;
+    border-top:1px solid #d5d5d5 ;
+    padding: 50px;
+   
+    
+}
+
+h1{
+    font-family: tahoma,sans-serif;
+    text-align: center;
+    
+}
+
+h2{
+    font-family: tahoma,sans-serif;
+    text-align: center;
+   
+}
+
+h3{
+    font-family: tahoma,sans-serif;
     text-align: center;
 }
 
-h2 {
-    font-size: 18px;
-    color: #88100f;
-    font-weight: normal;
+p{
+    font-family: tahoma,sans-serif;
     text-align: center;
-}
-
-h3 {
-    font-size: 16px;
-    text-decoration: underline;
-    color: #88100f;
-}
-
-p {
-    font-size: 14px;
     line-height: 28px;
+    width: 930px;
+    margin: 15px auto 30px auto;
+   
+}
+
+img{
+    width: 190px;
+}
+span {
+    font-family: tahoma,sans-serif;
+    font-weight: bold;
+    
+  }
+
+a{
+    background-color:  #49b970;
+    border-radius: 25px;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 24px;
+    padding: 10px 30px;
 }
