--- a/html-css/projetos/projeto007/estilo/style.css
+++ b/html-css/projetos/projeto007/estilo/style.css
@@ -59,7 +59,9 @@ h1,h2,h3{
 }
 
 .img-conteudo{
-   min-width: 250px;
+    
+    max-width: 250px;
+    max-height:180px ;
     display: inline;
     width: 100%;
     
