--- a/html-css/projetos/projeto007/estilo/style.css
+++ b/html-css/projetos/projeto007/estilo/style.css
@@ -59,11 +59,11 @@ h1,h2,h3{
 }
 
 .img-conteudo{
-    
-    max-width: 250px;
-    max-height:180px ;
     display: inline;
     width: 100%;
+    height: 100%;
+    width: 250px;
+    height: 180px;
     
    
 }
