--- a/html-css/projetos/projeto010/estilo/reset.css
+++ b/html-css/projetos/projeto010/estilo/reset.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins';
-    border: 1px solid salmon;
+   /* border: 1px solid salmon;*/
     
 }
 
@@ -38,7 +38,7 @@ table{
 }
 
 th,td{
-    border: 1px solid gray;
+    border: 1px solid var(--cor04);
     padding: 5px;
 }
 
@@ -46,3 +46,8 @@ img{
     width: 100%;
     
 }
+
+button{
+    border: none;
+}
+
