--- a/html-css/projetos/projeto010/estilo/style.css
+++ b/html-css/projetos/projeto010/estilo/style.css
@@ -156,13 +156,14 @@
 /* Anuncio 01 finalizado*/
 
 .box-principal{
-    padding: 50px;
+   margin: 0 auto;
+   padding: 50px;
 }
 
 .box-principal h3{
     text-align: center;
-    padding: 20px;
-    margin: 30px;
+    padding: 30px;
+    margin-bottom: 50px ;
     
 }
 
@@ -170,24 +171,19 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   flex-direction: row;
    height:100%;
   
 }
 
 
 
-.informacoes .box-info h3 {
+.informacoes .box-info  {
     text-align: center;
     margin: 30px;
 }
 
-.informacoes .box-info p {
-    text-align: center;
-    margin: 30px;
-}
 
-.informacoes .box-img-info{
+.informacoes .box-img-info img{
     width: 50%;
     margin: 0 auto;
 }
@@ -195,16 +191,17 @@
 /* informações*/
 
 .secao-tabela{
-    padding: 100px;
+   padding: 100px;
     text-align: center;
     font-weight: 600;
     margin: 0 auto;
+    background: var(--cor03);
 }
 
 
 .titulo-tabela {
-    margin: 30px;
-    padding: 30px;
+    margin-bottom: 150px;
+    
 }
 
 
@@ -215,7 +212,7 @@ table {
     background: var(--cor01);
     margin: 0 auto;
     height: 100%;
-    
+    box-shadow: 2px 2px 50px 10px var(--cor06);
     
 }
 
@@ -240,6 +237,16 @@ th,td {
     color: var(--cor05);
 }
 
+td{
+    cursor: pointer;
+    
+}
+
+td:hover{
+    background: var(--cor06);
+    transform: scale(1.1);
+}
+
 tbody tr:nth-of-type(odd) {
     background:var(--cor03);
 }
@@ -247,6 +254,47 @@ tbody tr:nth-of-type(odd) {
 tbody tr:nth-of-type(even) {
     background: var(--cor01);
 }
+
+footer{
+    margin: 0 auto;
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+    height: 100%;
+    padding: 20px;
+    gap: 10px;
+}
+
+.logo-footer{
+    margin: 50px;
+}
+
+.info-footer{
+   text-align: center;
+   
+}
+
+.info-footer p{
+    margin: 10px;
+    padding: 10px;
+    font-weight: 600;
+}
+
+.aluno-devMedia{
+    border-top: 1px solid var(--cor04);
+    background: var(--cor01);
+    color: var(--cor05);
+    text-align: center;
+    padding: 10px;
+    font-weight: 600;
+    width: 100%;
+}
+
+.aluno{
+    color: var(--cor06);
+}
+
 
 
 
