--- a/html-css/projetos/projeto010/estilo/reset.css
+++ b/html-css/projetos/projeto010/estilo/reset.css
@@ -3,8 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins';
-   /* border: 1px solid salmon;*/
     
+    
+}
+
+body{
+    height: 100vh;
 }
 
 :root{
