--- a/html-css/projetos/projeto012/index.css
+++ b/html-css/projetos/projeto012/index.css
@@ -14,11 +14,10 @@ body{
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
+    justify-content:space-between;
     min-height: 85px;
     padding: 0 10px;
-    margin: 0 auto;
+    
 }
 
 
@@ -26,22 +25,24 @@ body{
     font-weight: 600;
     font-size: 28px;
     color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 10px;
   }
 
  
   .topo-links{
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin: 0 auto;
+   margin: 0 auto;
+    
+   
+   
   }
 
   .topo-links ul a li{
         padding: 10px;
   }
+
+ 
 
   .img-topo img{
     width: 100%;
@@ -65,6 +66,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     margin: 20px;
+    padding-bottom: 40px;
   }
 
 
@@ -131,13 +133,13 @@ body{
 
 .info{
   background-color: #ccc;
-  margin: 20px auto;
-  width: 100%;
+ width: 100%;
+  
 
 }
 
 .todos-card{
-  max-width: 80rem;
+ 
   display: flex;
   margin: 0 auto;
 
@@ -161,7 +163,7 @@ body{
 
 footer{
   width: 100%;
-  padding: 10px;
+  padding: 20px;
   color: white;
   display: flex;
   align-items: center;
@@ -170,5 +172,39 @@ footer{
   margin: 0 auto;
 }
 
+.icons img{
+  padding: 10px;
+}
+
+.texto-rodape{
+  text-align: center;
+  margin: 0 auto;
+  padding: 10px;
+  border-bottom: 1px solid white;
+  font-size: 0.7rem;
+}
+
+.botoes{
+  margin: 0 auto;
+  text-align: center;
+
+
+}
+
+.botoes button{
+  padding: 5px;
+  margin: 10px;
+  width: 15%;
+  background-color: #575757;
+  color: white;
+  border: none;
+  border-radius: 0.3rem;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.botoes button:hover{
+  background-color: #2f675d;
+}
 
 
