--- a/react/projetos-react/otica-visao-show/src/componentes/main/banner/index.css
+++ b/react/projetos-react/otica-visao-show/src/componentes/main/banner/index.css
@@ -1,32 +1,44 @@
 
-
-
 .banner{
     background-image: url('/public/assets/imagens/capa.png');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-    width: 100%;
-   /* border: 4px solid rgb(153, 51, 54);*/
+    background-position: top center  ;
+   
+    height: 80vh;
+   
+  
 }
 
-.texto-banner{
+.banner  div{
+    color:  white;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 500px;
-    height: 100%;
-    color: aliceblue;
-   /* border: 4px solid rebeccapurple;*/
-    margin: 0 30px;
-    padding: 0 20px;
-   
-   
-
 }
 
-section{
-    padding: 20px;
-    border: 4px solid rebeccapurple;
+.banner  p, .banner  h1{
+    max-width: 500px;
+  font-family: 'Anybody', cursive;
 }
+
+.banner  p{
+    font-size: 36px;
+    color: rgb(196, 196, 196);
+}
+
+.banner  h1{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 60px;
+    margin: 0;
+    letter-spacing: 5px;
+    line-height: 70px;
+}
+
+
+
+
