--- a/react/projetos-react/otica-visao-show/src/componentes/main/contato/index.css
+++ b/react/projetos-react/otica-visao-show/src/componentes/main/contato/index.css
@@ -1,38 +1,58 @@
-.secao-contato{
+.secao-contato {
     width: 100%;
-    padding: 100px 20px;
     text-align: center;
-    color: white;
+    color: #fff;
+    padding: 100px 20px;
     background-color: #05031b;
-}
-
-.box-info{
+  }
+  
+  .box-info {
     display: flex;
     justify-content: center;
-}
-
-.info{
+  }
+  
+  .info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 15px;
-}
-
-.info div{
+  }
+  
+  .info div {
     display: flex;
-  align-items: center;
-  margin: 5px 0;
-}
-
-.info img {
+    align-items: center;
+    margin: 5px 0;
+  }
+  
+  .info img {
     width: 18px;
-}
-
-.info span {
+  }
+  
+  .info span {
     font-size: 14px;
     margin: 0 0 0 10px;
-}
+  }
 
-.info h4{
-    margin: 5px;
-}
+  @media (max-width: 768px){
+    .secao-contato{
+      padding: 60px 20px;
+    }
+  }
+
+  @media (max-width: 550px){
+    .secao-contato{
+      padding: 0 10px;
+    }
+    .box-info{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      
+    }
+
+    .info > div{
+      width: 150px;
+      text-align: center;
+    }
+  }
