--- a/react/projetos-react/4-multiplos-componentes/src/componentes/ListaDeSignos/style.css
+++ b/react/projetos-react/4-multiplos-componentes/src/componentes/ListaDeSignos/style.css
@@ -3,6 +3,15 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 1024px;
-    margin: 0 auto;
+    margin: 30px auto;
     box-sizing: border-box;
+   
   }
+
+@media (max-width: 768px){
+  .lista{
+    max-width: 400px;
+    flex-wrap: wrap;
+    margin: 30px auto;
+  }
+}
