--- a/react/projetos-react/otica-visao-show/src/componentes/main/produtos/index.css
+++ b/react/projetos-react/otica-visao-show/src/componentes/main/produtos/index.css
@@ -87,8 +87,12 @@
     .secao-produtos{
         padding: 0 10px;
     }
+    .box-imgs {
+        flex-direction: column;
+    }
     .box-img img{
         width: 100%;
+        height: 100%;
     }
     .secao-lista ul{
        
