--- a/react/projetos-react/spa-sorveteria/src/paginas/Sobre/index.css
+++ b/react/projetos-react/spa-sorveteria/src/paginas/Sobre/index.css
@@ -1,18 +1,19 @@
 main {
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    
   }
 
 .banner-sobre{
     background-image: url('/public/assets/banner-sobre.png');
-    background-color: rgb(249, 219, 121);
     background-position: center center;
     background-repeat: no-repeat;
-    height: 100vh;
+    background-size: cover;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+   
 
 }
 
@@ -42,7 +43,7 @@ main {
 }
 .sobre-image div{
    display: flex;
-
+  
   
    
 }
@@ -60,11 +61,11 @@ main {
       font-size: 60px;
     }
   
-    .sobre div {
+    .sobre-image  div {
       flex-direction: column;
     }
   
-    .sobre-image img {
+    .sobre-image  img {
       width: 100%;
     }
   }
