--- a/react/projetos-react/barbearia/src/landingpage/index.css
+++ b/react/projetos-react/barbearia/src/landingpage/index.css
@@ -74,31 +74,105 @@ main{
 }
 
 .texto{
-    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
-    padding: 40px 20px;
+    gap: 15px;
+    padding: 100px 20px;
     
 
+}
+
+.texto h1{
+    font-size: 40px;
+  margin-bottom: 30px;
 }
 
 .texto span{
-    font-weight: bolder;
-    padding: 20px;
-    
+    font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .texto p {
-    width: 50%;
-    padding: 20px;
-    margin: 0 auto;
+    line-height: 26px;
+  margin-bottom: 60px;
 }
 
 .texto .destaque{
-    margin: 20px;
-    color:  var(--cor01);
+    font-family: 'Great Vibes', cursive;
+  font-weight: 500;
+  font-size: 50px;
+  color: var(--cor01);
 }
 
 footer{
     text-align: center;
     padding: 20px;
+    
+}
+
+.link  {
+    color: rgb(0, 136, 255);
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.link-dark{
+    color: rgb(255, 117, 19);
+    text-decoration: none;
+    font-weight: 600;
+
+}
+
+@media(max-width: 768px){
+        nav{
+            display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding:0 20px;
+        }
+        nav img{
+            object-fit: cover;
+            width: 15%;
+           
+        }
+    
+        .bnt{ 
+           width: 15%;
+        }
+        .bnt img{
+            width: 20%;
+        }
+
+      
+        .texto{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 15px;
+            padding: 100px 20px;
+            
+        }
+}
+
+@media(max-width: 375px){
+    nav img{
+        object-fit: cover;
+        width: 20%;
+    }
+    .bnt{
+        width: 20%;
+    }
+    .bnt img{
+        width: 20%;
+    }
+
+    .banner{
+        background-position: center ;
+        width:  100vh;
+    }
 }
