--- a/react/projetos-react/cardapio-restaurante/src/styles/globals.css
+++ b/react/projetos-react/cardapio-restaurante/src/styles/globals.css
@@ -1,6 +1,7 @@
 :root {
 
-  --fonte:  'Courier New', Courier, monospace;
+  --font-Dancing: 'Dancing Script', cursive;
+--font-Poppins: 'Poppins', sans-serif;
 }
 
 *{
@@ -8,4 +9,11 @@
   padding: 0;
   box-sizing: border-box;
  
+}
+
+.limitarSessao{
+  max-width: 1024px;
+  margin: 0 auto;
+  width: 100%;
+  
 }
